--- a/My_CV.html
+++ b/My_CV.html
@@ -10,7 +10,7 @@
         <div class="item1">
             
             <p class="address">+32 499 25 55 22</br> leleuxmaud@gmail.com</br>
-                Rue Lileau, 48 </br> 4570 Marchin</p>
+                Rue Lileau, 48 </br> 4570 Marchin</p>main 
         </div>
         <div class="item2">
             <img class="photoMaud" src="images/photo_Maud_Leleux_carre.png" alt="Maud">
